--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 group = 'com.pshakhlovich'
@@ -9,7 +10,16 @@ repositories {
     mavenCentral()
 }
 
+javafx {
+    version = "21"
+    modules = ['javafx.controls', 'javafx.fxml']
+    platform = 'win'
+}
+
 dependencies {
+    implementation 'org.openjfx:javafx-controls:21.0.3'
+    implementation 'org.openjfx:javafx-fxml:21.0.3'
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
